--- a/aboutus.html
+++ b/aboutus.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-    <header>
-      <div class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid">
+      <div class="container">
         <div class="row">
           <div class="col">
             <h1>NuCamp</h1>
@@ -60,7 +60,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="contactus.html">
                 <i class="fa fa-address-card fa-lg"></i> Contact
               </a>
             </li>
@@ -138,7 +138,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Sites</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="contactus.html">Contact</a></li>
             </ul>
           </div>
           <div class="col-6 col-sm-5 text-center">
