added images, tasks 1 and 2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <img src="img/logo.png" class="img-fluid" />
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -33,6 +36,9 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo.png" height="30" width="30"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -73,34 +79,128 @@
       <div class="row row-content align-items-center">
         <div class="col-sm-4 col-md-3 order-sm-last">
           <h2 class="text-sm-right">Discover & Review</h2>
-          <h3>Our Campsites</h3>
-          <p class="d-none d-sm-block">
-            Explore our growing database of curated campsites and leave your own
-            reviews!
-          </p>
+        </div>
+        <div class="col">
+          <div class="media">
+            <img
+              class="d-flex mr-3 img-thumbnail"
+              src="img/breadcrumb-trail-thumb.jpg"
+              alt="Breadcrumb Trail"
+            />
+            <div class="media-body align-self-center">
+              <h3>Our Campsites</h3>
+              <p class="d-none d-sm-block">
+                Explore our growing database of curated campsites and leave your
+                own reviews!
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row row-content align-items-center">
-      <div class="col-sm4 col-md-3">
-        <h2>Featured Campsites</h2>
-        <h3>React Lake Campground</h3>
-        <p class="d-none d-sm-block">
-          Nestled in the foothills of the Chrome Mountains, this campground on
-          the shores of the pristine React Lake is a favorite for fly fishers.
-        </p>
+      <div class="row row-content align-items-center">
+        <div class="col-sm4 col-md-3">
+          <h2>Featured Campsites</h2>
+        </div>
+        <div class="col">
+          <div class="media">
+            <img
+              class="d-flex mr-3 img-thumbnail order-last"
+              src="img/react-lake-thumb.jpg"
+              alt="React Lake"
+            />
+            <div class="media-body align-self-center">
+              <h3>React Lake Campground</h3>
+              <p class="d-none d-sm-block">
+                Nestled in the foothills of the Chrome Mountains, this
+                campground on the shores of the pristine React Lake is a
+                favorite for fly fishers.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="row row-content align-items-center">
-      <div class="col-sm4 col-md-3 order-sm-last">
-        <h2 class="text-sm-right">Our Community Partners</h2>
-        <h3>Bootstrap Outfitters</h3>
-        <p class="d-none d-sm-block">
-          Bootstrap Outfitters supplies you with gear you need at prices you
-          can't beat.
-        </p>
+      <div class="row row-content align-items-center">
+        <div class="col-sm4 col-md-3 order-sm-last">
+          <h2 class="text-sm-right">Our Community Partners</h2>
+        </div>
+        <div class="col">
+          <div class="media">
+            <img
+              class="d-flex mr-3 img-thumbnail "
+              src="img/bootstrap-thumb.png"
+              alt="Bootstrap Outfitters"
+            />
+            <div class="media-body align-self-center">
+              <h3>Bootstrap Outfitters</h3>
+              <p class="d-none d-sm-block">
+                Bootstrap Outfitters supplies you with gear you need at prices
+                you can't beat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content align-items-center">
+        <div class="col col-6-sm mx-auto">
+          <div class="card">
+            <h3 class="card-header bg-info text-white">
+              Reserve a campsite
+            </h3>
+            <div class="card-body">
+              <form>
+                <div class="row">
+                  <div class="col form-group row">
+                    <label
+                      for="numCampers"
+                      class="col-sm-6 col-form-label col-xs"
+                      >Number of Campers</label
+                    >
+                    <div class="col">
+                      <select
+                        name="numCampers"
+                        id="numCampers"
+                        class="col col-xs"
+                        class="form-control"
+                      >
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col form-group row">
+                    <label for="date" class="col-sm-6 col-form-label col-xs"
+                      >Date</label
+                    >
+                    <div class="col">
+                      <input
+                        id="date"
+                        type="date"
+                        class="form-control"
+                        class="col col-xs"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button type="submit" class="btn btn-primary">
+                      Search
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
