--- a/aboutus.html
+++ b/aboutus.html
@@ -24,6 +24,9 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a href="index.html"><img src="img/logo.png" class="img-fluid"/></a>
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -34,6 +37,10 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
+        <a class="navbar-brand" href="index.html"
+          ><img src="img/logo.png" height="30" width="30"
+        /></a>
+
         <button
           class="navbar-toggler"
           type="button"
@@ -113,87 +120,89 @@
           </div>
         </div>
         <div class="col">
-                <div class="card card-body bg-light mt-3">
-                    <blockquote class="blockquote">
-                        <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.</p>
-                        <footer class="blockquote-footer">Muriel Strode,
-                            <cite title="Source Title">"Wind-Wafted Wild Flowers" -
-                            The Open Court, 1903</cite>
-                        </footer>
-                    </blockquote>
-        		</div>
-            </div>   
-        </div>  
-      </div>
-
-      <div class="row">
-        <div class="col col-xs">
-          <h3>Community Partners</h3>
-          <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-          <p class="d-none d-sm-block">
-            Bootstrap Outfitters supplies you with the gear you need at prices
-            you can't beat.
-          </p>
-          <h4>
-            Git Out Expeditions <small>Group Adventure Expeditions</small>
-          </h4>
-          <p class="d-none d-sm-block">
-            Join Git Out Expeditions to explore new horizons with a group of
-            other adventurers!
-          </p>
-          <h4>
-            Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
-          </h4>
-          <p class="d-none d-sm-block">
-            Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by
-            Mongo Fly Shop.
-          </p>
-          <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-          <p class="d-none d-sm-block">
-            From polar fleeces to swimsuits, hiking boots to waders, a visit to
-            Node will be sure to get you covered.
-          </p>
+          <div class="card card-body bg-light mt-3">
+            <blockquote class="blockquote">
+              <p class="mb-0">
+                I will not follow where the path may lead, but I will go where
+                there is no path, and I will leave a trail.
+              </p>
+              <footer class="blockquote-footer">
+                Muriel Strode,
+                <cite title="Source Title"
+                  >"Wind-Wafted Wild Flowers" - The Open Court, 1903</cite
+                >
+              </footer>
+            </blockquote>
+          </div>
         </div>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col col-xs">
+        <h3>Community Partners</h3>
+        <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
+        <p class="d-none d-sm-block">
+          Bootstrap Outfitters supplies you with the gear you need at prices you
+          can't beat.
+        </p>
+        <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
+        <p class="d-none d-sm-block">
+          Join Git Out Expeditions to explore new horizons with a group of other
+          adventurers!
+        </p>
+        <h4>
+          Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
+        </h4>
+        <p class="d-none d-sm-block">
+          Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by
+          Mongo Fly Shop.
+        </p>
+        <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
+        <p class="d-none d-sm-block">
+          From polar fleeces to swimsuits, hiking boots to waders, a visit to
+          Node will be sure to get you covered.
+        </p>
+      </div>
+    </div>
+
     <div class="row row-content">
-            <div class="col-sm-9">
-            	<h2>Facts &amp; Figures</h2>
-            	<div class="table-responsive">
-               	    <table class="table table-striped">
-	                <thead>
-	                    <tr class="bg-primary text-light">
-	                        <th></th>
-	                        <th>2016</th>
-	                        <th>2017</th>
-	                        <th>2018</th>
-	                    </tr>
-                    	</thead>
-	                <tbody class="table-primary">
-                            <tr>
-                                <th>Staff Wilderness Experts</th>
-                                <td>10</td>
-                                <td>20</td>
-                                <td>40</td>
-                            </tr>
-                            <tr>
-                                <th>New Campers</th>
-                                <td>256</td>
-                                <td>1,280</td>
-                                <td>5,360</td>
-                            </tr>
-                            <tr>
-                                <th>Square Miles Covered</th>
-                                <td>101,325</td>
-                                <td>423,000</td>
-                                <td>~3,00,000,000</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>                
-            </div>
-       </div>
+      <div class="col-sm-9">
+        <h2>Facts &amp; Figures</h2>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr class="bg-primary text-light">
+                <th></th>
+                <th>2016</th>
+                <th>2017</th>
+                <th>2018</th>
+              </tr>
+            </thead>
+            <tbody class="table-primary">
+              <tr>
+                <th>Staff Wilderness Experts</th>
+                <td>10</td>
+                <td>20</td>
+                <td>40</td>
+              </tr>
+              <tr>
+                <th>New Campers</th>
+                <td>256</td>
+                <td>1,280</td>
+                <td>5,360</td>
+              </tr>
+              <tr>
+                <th>Square Miles Covered</th>
+                <td>101,325</td>
+                <td>423,000</td>
+                <td>~3,00,000,000</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
     <footer class="site-footer">
       <div class="container">
