--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
           </div>
+          <div class="col col-md-4 col-xl-2 col-xs">
+            <a href="#reserveForm" class="btn btn-info btn-lg order-last"
+              >Reserve Campsite</a
+            >
+          </div>
         </div>
       </div>
     </header>
@@ -150,7 +155,7 @@
               Reserve a campsite
             </h3>
             <div class="card-body">
-              <form>
+              <form id="reserveForm">
                 <div class="row">
                   <div class="col form-group row">
                     <label
@@ -162,9 +167,9 @@
                       <select
                         name="numCampers"
                         id="numCampers"
-                        class="col col-xs"
-                        class="form-control"
+                        class="col col-xs form-control"
                       >
+                        <option selected>Select...</option>
                         <option>1</option>
                         <option>2</option>
                         <option>3</option>
