use tab-based layout

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col">
           <div class="media">
             <img
-              class="d-flex mr-3 img-thumbnail"
+              class="d-flex ml-3 img-thumbnail"
               src="img/breadcrumb-trail-thumb.jpg"
               alt="Breadcrumb Trail"
             />
@@ -149,7 +149,7 @@
       </div>
 
       <div class="row row-content align-items-center">
-        <div class="col col-6-sm mx-auto">
+        <div class="col col-sm-6 mx-auto">
           <div class="card">
             <h3 class="card-header bg-info text-white">
               Reserve a campsite
@@ -189,8 +189,9 @@
                       <input
                         id="date"
                         type="date"
-                        class="form-control"
-                        class="col col-xs"
+                        value="2019-11-22"
+                        class="col
+                      col-xs form-control"
                       />
                     </div>
                   </div>
