--- a/index.html
+++ b/index.html
@@ -100,6 +100,39 @@
                   </div>
                 </div>
                 <div class="row">
+                  <div class="col form-group row">
+                    <label class="col-sm-6 col-form-label col-xs"
+                      >Campsite Type</label
+                    >
+                    <div
+                      class="col col-xs btn-group btn-group-toggle"
+                      data-toggle="buttons"
+                    >
+                      <label class="btn btn-success active">
+                        <input
+                          type="radio"
+                          name="siteType"
+                          id="siteTent"
+                          value="tent"
+                          autocomplete="off"
+                          checked
+                        />
+                        Tent
+                      </label>
+                      <label class="btn btn-primary">
+                        <input
+                          type="radio"
+                          name="siteType"
+                          id="siteRV"
+                          value="RV"
+                          autocomplete="off"
+                        />
+                        RV
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
                   <div class="col">
                     <button class="btn btn-secondary" data-dismiss="modal">
                       Cancel
