--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -282,10 +287,24 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="http://instagram.com/"
+              ><i class="fa fa-instagram"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="http://facebook.com/"
+              ><i class="fa fa-facebook"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-twitter"
+              href="http://twitter.com/"
+              ><i class="fa fa-twitter"></i
+            ></a>
+            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </div>
           <div class="col-sm-4 text-center">
             <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
