--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -329,6 +334,14 @@
                 <span class="carousel-control-next-icon"></span>
                 <span class="sr-only">Next</span>
               </a>
+              <div class="btn-group" id="carouselButton">
+                <button class="btn btn-danger btn-sm" id="carouselPause">
+                  <i class="fa fa-pause"></i>
+                </button>
+                <button class="btn btn-danger btn-sm" id="carouselPlay">
+                  <i class="fa fa-play"></i>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -340,7 +353,7 @@
         <div class="col">
           <div class="media">
             <img
-              class="d-flex ml-3 img-thumbnail"
+              class="d-flex mr-3 img-thumbnail"
               src="img/breadcrumb-trail-thumb.jpg"
               alt="Breadcrumb Trail"
             />
@@ -399,67 +412,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="row row-content align-items-center">
-        <div class="col col-sm-6 mx-auto">
-          <div class="card">
-            <h3 class="card-header bg-info text-white">
-              Reserve a campsite
-            </h3>
-            <div class="card-body">
-              <form id="reserveForm">
-                <div class="row">
-                  <div class="col form-group row">
-                    <label
-                      for="numCampers"
-                      class="col-sm-6 col-form-label col-xs"
-                      >Number of Campers</label
-                    >
-                    <div class="col">
-                      <select
-                        name="numCampers"
-                        id="numCampers"
-                        class="col col-xs form-control"
-                      >
-                        <option selected>Select...</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                      </select>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col form-group row">
-                    <label for="date" class="col-sm-6 col-form-label col-xs"
-                      >Date</label
-                    >
-                    <div class="col">
-                      <input
-                        id="date"
-                        type="date"
-                        value="2019-11-22"
-                        class="col
-                      col-xs form-control"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <button type="submit" class="btn btn-primary">
-                      Search
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
 
     <footer class="site-footer">
@@ -476,10 +428,24 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="http://instagram.com/"
+              ><i class="fa fa-instagram"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="http://facebook.com/"
+              ><i class="fa fa-facebook"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-twitter"
+              href="http://twitter.com/"
+              ><i class="fa fa-twitter"></i
+            ></a>
+            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </div>
           <div class="col-sm-4 text-center">
             <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
@@ -494,5 +460,16 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(function() {
+        $('.carousel').carousel({ interval: 2000 });
+        $('#carouselPause').click(function() {
+          $('.carousel').carousel('pause');
+        });
+        $('#carouselPlay').click(function() {
+          $('.carousel').carousel('cycle');
+        });
+      });
+    </script>
   </body>
 </html>
